...
        cta.translatesAutoresizingMaskIntoConstraints = false
        cta.roundCorners()
        cta.setTitle("충전", for: .normal)
        cta.titleLabel?.font = UIFont.systemFont(ofSize: 20, weight: .semibold)
        cta.setBackgroundImage(UIImage(color: .primaryRed), for: .normal)
        cta.tintColor = .white
        cta.accessibilityIdentifier = "topup_enteramount_confirm_button"
        cta.addTarget(self, action: #selector(didTapCTAButton), for: .touchUpInside)
        return cta
    }()
    
    private let activityIndicator: UIActivityIndicatorView = {
        let activity = UIActivityIndicatorView(style: .medium)
...
